@@ -1,5 +1,5 @@
 /*
- * "$Id: file.c,v 1.13.2.20 2001/06/19 15:30:29 mike Exp $"
+ * "$Id: file.c,v 1.13.2.21 2001/06/29 13:34:13 mike Exp $"
  *
  *   Filename routines for HTMLDOC, a HTML document processing program.
  *
@@ -390,6 +390,13 @@ file_find(const char *path,		/* I - Path "dir;dir;dir" */
       if (!access(filename, 0))
 	return (filename);
     }
+
+   /*
+    * If the filename exists, return the filename...
+    */
+
+    if (!access(s, F_OK))
+      return ((char *)s);
   }
   else
   {
@@ -802,5 +809,5 @@ file_temp(char *name,			/* O - Filename */
 
 
 /*
- * End of "$Id: file.c,v 1.13.2.20 2001/06/19 15:30:29 mike Exp $".
+ * End of "$Id: file.c,v 1.13.2.21 2001/06/29 13:34:13 mike Exp $".
  */
